--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <div id="emoji-shower" style="position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:2;"></div>
 
   <audio id="bgm" autoplay loop>
-    <source src="1.mp3" type="audio/mpeg">
+    <source src="./2.mp3" type="audio/mpeg">
   </audio>
 
   <div class="main-content">
@@ -220,7 +220,7 @@
   function showEmojiShower(type) {
     const container = document.getElementById('emoji-shower');
     const emojis = type === 'hearts' ? ['💖', '💗', '💓', '💞', '💕', '❤️'] : ['😢', '🥺', '😔', '😭'];
-    const count = 40;
+    const count = 15;
 
     for (let i = 0; i < count; i++) {
       const emoji = document.createElement('div');
@@ -344,7 +344,14 @@
     createHearts();
     changeBackground(); // Set initial background
 
-    // Fix background music autoplay on mobile
+    // Ensure music plays on mobile after first tap
+    document.addEventListener('touchstart', () => {
+      const bgm = document.getElementById('bgm');
+      if (bgm && bgm.paused) {
+        bgm.play().catch(() => {});
+      }
+    }, { once: true });
+
     document.addEventListener('click', () => {
       const bgm = document.getElementById('bgm');
       if (bgm && bgm.paused) {
